test/libsolidity/syntaxTests/emit/emit_non_event.sol
contract C {
  uint256 Test;

  function f() public {
    emit Test();
  }
}
// ----
// TypeError: (63-69): Type is not callable
